force-app/main/default/objects/ImpossibleGroupMembers__x/ImpossibleGroupMembers__x.object-meta.xml
<CustomObject>
    <description>Impossible Group member assignments</description>
    <externalDataSource>Impossible</externalDataSource>
    <externalName>ImpossibleGroupMembers</externalName>
    <label>Group Member Assignment</label>
    <pluralLabel>Group Member Assignments</pluralLabel>
</CustomObject>