force-app/main/default/objects/ImpossibleGroupMembers__x/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <externalDeveloperName>GroupId</externalDeveloperName>
    <label>Group ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>