force-app/main/default/objects/ImpossibleGroupMembers__x/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>MemberId</externalDeveloperName>
    <label>User/Group ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MemberId</relationshipName>
    <type>Lookup</type>
</CustomField>