force-app/main/default/objects/ImpossibleGroupMembers__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name</description>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>